cancel order API, adjust some APIerror