@@ -1,7 +1,6 @@
 package com.lactobloom.service;
 
-import com.lactobloom.dto.ProductRequest;
-import com.lactobloom.dto.ProductResponse;
+import com.lactobloom.dto.ProductDto;
 import com.lactobloom.exception.ResourceNotFoundException;
 import com.lactobloom.model.*;
 import com.lactobloom.repository.*;
@@ -10,6 +9,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -32,7 +32,7 @@ public class ProductService implements IProductService {
     private UserRepository userRepository;
 
     @Override
-    public ProductResponse saveProduct(int brandId, int categoryId, ProductRequest productRequest) {
+    public ProductDto.ProductResponse saveProduct(int brandId, int categoryId, ProductDto.ProductRequest productRequest) {
         Product product = mapToEntity(productRequest);
         Brand brand = brandRepository.findById(brandId).orElseThrow(() ->
                 new ResourceNotFoundException("Brand", "Id", brandId));
@@ -45,31 +45,40 @@ public class ProductService implements IProductService {
     }
 
     @Override
-    public List<ProductResponse> getAllProducts() {
+    public List<ProductDto.ProductResponse> getAllProducts() {
         List<Product> productList = productRepository.findAll();
         return productList.stream().map(this::mapToResponse).collect(Collectors.toList());
     }
 
     @Override
-    public ProductResponse getProductById(int id) {
-        Product product = productRepository.findById((int) id).orElseThrow(() ->
+    public ProductDto.ProductResponse getProductById(int id) {
+        Product product = productRepository.findById((long) id).orElseThrow(() ->
                 new ResourceNotFoundException("Product", "Id", id));
         return mapToResponse(product);
     }
 
     @Override
-    public List<ProductResponse> getUserWishlist(){
-        String email = SecurityContextHolder.getContext().getAuthentication().getName();
-        User user = userRepository.findByEmail(email).orElseThrow(() ->
-                new ResourceNotFoundException("User", "email", email));
-        List<Wishlist> wishlist = wishlistRepository.findByUserUserId(user.getUserId());
-        List<Product> productList = wishlist.stream().map(Wishlist::getProduct).toList();
-        return productList.stream().map(this::mapToResponse).collect(Collectors.toList());
+    public List<ProductDto.ProductResponse> get4RandomProducts() {
+        List<Product> productList = productRepository.findAll();
+        Collections.shuffle(productList);
+        return productList.stream().limit(4).map(this::mapToResponse).collect(Collectors.toList());
     }
 
     @Override
-    public ProductResponse updateProduct(int id, int brandId, int categoryId, ProductRequest productRequest) {
-        Product existingProduct = productRepository.findById((int) id).orElseThrow(() ->
+    public ProductDto.ProductResponse getProductByWishlistId(int wishlistId){
+        Wishlist wishlist = wishlistRepository.findById(wishlistId).orElseThrow(() ->
+                new ResourceNotFoundException("Wishlist", "Id", wishlistId));
+        String email = SecurityContextHolder.getContext().getAuthentication().getName();
+        User user = userRepository.findByEmail(email).orElseThrow(() ->
+                new ResourceNotFoundException("User", "email", email));
+        if(wishlist.getUser() == user)
+            return mapToResponse(wishlist.getProduct());
+        return null;
+    }
+
+    @Override
+    public ProductDto.ProductResponse updateProduct(int id, int brandId, int categoryId, ProductDto.ProductRequest productRequest) {
+        Product existingProduct = productRepository.findById((long) id).orElseThrow(() ->
                 new ResourceNotFoundException("Product", "Id", id));
         Brand brand = brandRepository.findById(brandId).orElseThrow(() ->
                 new ResourceNotFoundException("Brand", "Id", brandId));
@@ -79,55 +88,73 @@ public class ProductService implements IProductService {
         existingProduct.setBrand(brand);
         existingProduct.setCategory(category);
         existingProduct.setDescription(productRequest.getDescription());
+        existingProduct.setLongDescription(productRequest.getLongDescription());
         existingProduct.setPrice(productRequest.getPrice());
         existingProduct.setDiscount(productRequest.getDiscount());
         existingProduct.setStock(productRequest.getStock());
+        existingProduct.setPreOrder(productRequest.isPreOrder());
         return mapToResponse(productRepository.save(existingProduct));
     }
 
     @Override
     public void deleteProduct(int id) {
-        productRepository.findById((int) id).orElseThrow(() ->
+        productRepository.findById((long) id).orElseThrow(() ->
                 new ResourceNotFoundException("Product", "Id", id));
-        productRepository.deleteById((int) id);
+        productRepository.deleteById((long) id);
     }
 
     @Override
-    public List<ProductResponse> searchProductsByName(String productName) {
-        List<Product> productList = productRepository.findByProductNameContainingIgnoreCase(productName);
-        return productList.stream().map(this::mapToResponse).collect(Collectors.toList());
+    public List<ProductDto.ProductResponse> searchProducts(String productName, Integer categoryId, Integer brandId) {
+        if (categoryId != null && brandId != null) {
+            return productRepository.findByProductNameContainingIgnoreCaseAndCategoryCategoryIdAndBrandBrandId(productName, categoryId, brandId)
+                    .stream().map(this::mapToResponse).collect(Collectors.toList());
+        }
+        else if (categoryId != null) {
+            return productRepository.findByProductNameContainingIgnoreCaseAndCategoryCategoryId(productName, categoryId)
+                    .stream().map(this::mapToResponse).collect(Collectors.toList());
+        }
+        else if (brandId != null) {
+            return productRepository.findByProductNameContainingIgnoreCaseAndBrandBrandId(productName, brandId)
+                    .stream().map(this::mapToResponse).collect(Collectors.toList());
+        }
+        return productRepository.findByProductNameContainingIgnoreCase(productName)
+                .stream().map(this::mapToResponse).collect(Collectors.toList());
     }
 
     @Override
-    public List<ProductResponse> getProductsByCategoryId(int categoryId) {
+    public List<ProductDto.ProductResponse> getProductsByCategoryId(int categoryId) {
         return productRepository.findByCategoryCategoryId(categoryId).stream().map(this::mapToResponse).collect(Collectors.toList());
     }
 
     @Override
-    public List<ProductResponse> getProductsByBrandId(int brandId) {
+    public List<ProductDto.ProductResponse> getProductsByBrandId(int brandId) {
         return productRepository.findByBrandBrandId(brandId).stream().map(this::mapToResponse).collect(Collectors.toList());
     }
 
-    private ProductResponse mapToResponse (Product product){
-        ProductResponse productResponse = new ProductResponse();
+    private ProductDto.ProductResponse mapToResponse (Product product){
+        ProductDto.ProductResponse productResponse = new ProductDto.ProductResponse();
         productResponse.setProductId(product.getProductId());
         productResponse.setProductName(product.getProductName());
         productResponse.setBrandName(product.getBrand().getBrandName());
         productResponse.setCategoryName(product.getCategory().getCategoryName());
         productResponse.setDescription(product.getDescription());
+        productResponse.setLongDescription(product.getLongDescription());
         productResponse.setPrice(product.getPrice());
         productResponse.setDiscount(product.getDiscount());
         productResponse.setStock(product.getStock());
+        productResponse.setPreOrder(product.isPreOrder());
         return productResponse;
     }
 
-    private Product mapToEntity(ProductRequest productRequest){
+    private Product mapToEntity(ProductDto.ProductRequest productRequest){
         Product product = new Product();
         product.setProductName(productRequest.getProductName());
         product.setDescription(productRequest.getDescription());
+        product.setLongDescription(productRequest.getLongDescription());
         product.setPrice(productRequest.getPrice());
         product.setDiscount(productRequest.getDiscount());
         product.setStock(productRequest.getStock());
+        product.setPreOrder(productRequest.isPreOrder());
         return product;
     }
 }
